--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -188,10 +188,9 @@
 
         function checkAnswer(selectedName) {
             if (selectedName === currentInsect.wirkstoffe[0]) {
-                alert("Richtig! Lade die nächste Frage.");
                 loadNewQuestion();
             } else {
-                alert("Falsch. Versuche es erneut!");
+                alert("Mörrp. Versuche es erneut!");
             }
         }
     </script>
