--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -51,6 +51,7 @@
     </div>
 
     <script>
+        const insects = [
             {
                 art: "Nervengift",
                 wirkungsort: "Axon",
@@ -142,7 +143,7 @@
                 wirkstoffgruppe: "Toxine aus Bakterienproteinen",
                 wirkstoffe: ["Bacillus thuringiensis israelensis"]
             }
-     ];
+  ];
 
         let currentInsect = null;
 
