--- a/quiz3/index.html
+++ b/quiz3/index.html
@@ -29,13 +29,14 @@
             display: none;
             padding: 10px 20px;
             margin: 10px 0;
-            background-color: #28a745;
+            background-color: #28a745;  /* Grün für richtige Antwort */
             color: white;
             border-radius: 5px;
             font-weight: bold;
-            position: fixed;
-            top: 20px;
-            right: 20px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             z-index: 1000;
             opacity: 0;
             transition: opacity 0.5s ease-in-out;
@@ -47,14 +48,14 @@
             display: inline-block;
             padding: 10px 20px;
             margin: 10px;
-            background-color: #007BFF;
+            background-color: #7ac728;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         .btn:hover {
-            background-color: #0056b3;
+            background-color: #7ac728;
         }
         .image-container {
             margin-bottom: 20px;
@@ -159,17 +160,23 @@
             document.getElementById('question1').appendChild(imageContainer);
         }
 
-        function showNotification(message) {
+        function showNotification(message, isCorrect) {
             var notification = document.getElementById('notification');
-            notification.textContent = message; 
-            notification.style.display = 'block'; 
+            
+            // Text und Farbe anpassen je nach Antwort
+            notification.textContent = message;
+            notification.style.backgroundColor = isCorrect ? '#28a745' : '#dc3545';  // Grün für richtig, Rot für falsch
+
+            // Sichtbarkeit und Position anpassen
+            notification.style.display = 'block';
             setTimeout(function() {
-                notification.style.opacity = '1'; 
+                notification.style.opacity = '1';
             }, 10);
+
             setTimeout(function() {
-                notification.style.opacity = '0'; 
+                notification.style.opacity = '0';
                 setTimeout(function() {
-                    notification.style.display = 'none'; 
+                    notification.style.display = 'none';
                 }, 500);
             }, 2000);
         }
@@ -177,11 +184,11 @@
         function checkAnswer(answer) {
             let correctAnswer = selectedInsekt.development;
             if (answer === correctAnswer) {
-                showNotification("Richtig!");
+                showNotification("Richtig!", true);  // Grün für korrekt
                 nextQuestion('question2');
                 showLifeStyleAnswers();
             } else {
-                showNotification("Leider falsch. Versuche es noch einmal.");
+                showNotification("Leider falsch. Versuche es noch einmal.", false);  // Rot für falsch
             }
         }
 
@@ -209,28 +216,28 @@
 
         function checkLifeStyle(answer) {
             if (selectedInsekt.lebensweise.includes(answer)) {
-                showNotification("Richtig!");
+                showNotification("Richtig!", true);
                 nextQuestion('question3');
             } else {
-                showNotification("Leider falsch. Versuche es noch einmal.");
+                showNotification("Leider falsch. Versuche es noch einmal.", false);
             }
         }
 
         function checkControl(answer) {
             if (selectedInsekt.bekaempfungsmethoden.includes(answer)) {
-                showNotification("Richtig!");
+                showNotification("Richtig!", true);
                 nextQuestion('question4');
             } else {
-                showNotification("Leider falsch. Versuche es noch einmal.");
+                showNotification("Leider falsch. Versuche es noch einmal.", false);
             }
         }
 
         function checkProduct(answer) {
             if (selectedInsekt.mittel === answer) {
-                showNotification("Richtig! Du hast das Spiel gewonnen.");
+                showNotification("Richtig! Du hast das Spiel gewonnen.", true);
                 nextQuestion('result');
             } else {
-                showNotification("Leider falsch. Versuche es noch einmal.");
+                showNotification("Leider falsch. Versuche es noch einmal.", false);
             }
         }
 
@@ -242,3 +249,4 @@
     </script>
 </body>
 </html>
+
